# countMyHours

./: Cargo.toml  Makefile.toml  README copy.md  README.md
src/: commands.rs  config_loader.rs  file_utils.rs  formatter.rs  main.rs  time_utils.rs
